Página feed finalizada/Revisão ortográfica realizada

--- a/src/app/ajuda/ajuda.component.html
+++ b/src/app/ajuda/ajuda.component.html
@@ -37,7 +37,7 @@
                      </div>
                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                         <div class="card-body">
-                           <p>Acesse www.eureka.com.br. Na parte direita da tela insira as seguintes
+                           <p>Acesse www.eurekacultural.tech . Na parte direita da tela insira as seguintes
                               informações:</p>
                            <p><strong>E-mail e Senha.</strong> </p>
                            <p>Observação: Utilize o e-mail e senha previamente informados no momento do
@@ -57,11 +57,10 @@
                      </div>
                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                         <div class="card-body">
-                           <p> 1. Acesse a página www.eureka.com.br</p>
+                           <p> 1. Acesse a página www.eurekacultural.tech</p>
                            <p> 2. Insira as informações requisitadas com os seus dados verdadeiros.</p>
                            <p>3. Clique em “Cadastrar”</p>
-                           <p>4. Caso você tenha digitado seus dados corretamente a mensagem: “Cadastro
-                              realizado com sucesso” irá aparecer.</p>
+                           <p>4. Caso você tenha digitado seus dados corretamente a mensagem: “Dados cadastrados com sucesso” irá aparecer.</p>
                            <p>5. Pronto! Agora você faz parte da comunidade Eureka.</p>
 
                         </div>
@@ -100,7 +99,7 @@
                         <div class="card-body">
                            <p>Depois de fazer o login você será direcionado para o seu Feed de notícias. Na
                               caixa de texto no campo superior da tela que contém a mensagem “No que você está
-                              pensando” escreva sua publicação. Quando tudo estiver do jeito que você deseja
+                              pensando?” escreva sua publicação. Quando tudo estiver do jeito que você deseja
                               clique em “Publicar”.
                            </p>
                         </div>
@@ -111,14 +110,13 @@
                         <h5 class="mb-0">
                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix"
                               aria-expanded="false" aria-controls="collapseSix" style="color: #7a297a;">
-                              Como comentar uma publicação?
+                              Como vejo minhas conexões?
                            </button>
                         </h5>
                      </div>
                      <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                         <div class="card-body">
-                           <p>Para comentar uma publicação clique na parte abaixo em “Comentário” e digite o
-                              texto desejado e quando tiver terminado clique no botão ”Postar”.</p>
+                           <p>Depois de fazer o login, clique em "Conexões". A página trará todos os membros que estão na rede social.</p>
                         </div>
                      </div>
                   </div>
@@ -135,7 +133,7 @@
                      <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
                         <div class="card-body">
                            <p>Caso você não consiga se lembrar da senha que cadastrou entre em contato através
-                              do e-mail: eurekasocial@gmail.com.</p>
+                              do e-mail: eurekasocialeducation@gmail.com.</p>
                         </div>
                      </div>
                   </div>
@@ -185,7 +183,7 @@
                         <h5 class="mb-0">
                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTen"
                               aria-expanded="true" aria-controls="collapseTen" style="color: #7a297a;">
-                              Como relatar um problema a Eureka?
+                              Como relatar um problema à Eureka?
                            </button>
                         </h5>
                      </div>
@@ -203,7 +201,7 @@
 
 
                <div class="form-group">
-                  <label for="exampleFormControlTextarea1"><strong>Não encontrou o quê procurava? Mande-nos sua
+                  <label for="exampleFormControlTextarea1"><strong>Não encontrou o que procurava? Mande-nos sua
                         pergunta ou sugestão!</strong></label>
                   <textarea class="form-control" style="resize: none" id="exampleFormControlTextarea1" rows="5"></textarea>
 
