--- a/src/app/gtrofeus/gtrofeus.component.html
+++ b/src/app/gtrofeus/gtrofeus.component.html
@@ -27,7 +27,7 @@
                        
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Galeria de Trofeus</h5>
+                        <h5 class="card-title">Galeria de Troféus</h5>
 
                         <div class="card-text gtrofeus container ">
                             <img src="../../assets/image/chepeu.png" alt="" data-toggle="collapse" href="#collapseExample"
@@ -36,9 +36,9 @@
                                 <div class="collapse" id="collapseExample">
                                     <div class="card card-body descricao">
 
-                                        Formado em Ensino superior
-                                        esta disposto a responder
-                                        perguntas especificas!
+                                        Ensino superior completo.
+                                        Disposto a responder
+                                        perguntas específicas!
                                         <img src="../../assets/image/icon.png" alt="" id="lamp1">
 
                                     </div>
@@ -51,9 +51,8 @@
                             <div class="geo">
                                 <div class="collapse" id="carro">
                                     <div class="card card-body descricao">
-                                        Disponibiliza o seu veiculo
-                                        para dar carona a
-                                        eventos na comunidade!
+                                        Disponibiliza o seu veículo
+                                        para dar carona.
                                         <img src="../../assets/image/icon.png" alt="" id="lamp1">
                                     </div>
                                 </div>
@@ -83,8 +82,7 @@
                             <div class="geo">
                                 <div class="collapse" id="conecta">
                                     <div class="card card-body descricao">
-                                        Esta conectado a todas
-                                        as redes da Eureka!
+                                        Fez novas conexões na Eureka!
                                         <img src="../../assets/image/icon.png" alt="" id="lamp1">
                                     </div>
                                 </div>
@@ -98,7 +96,7 @@
                                 <div class="collapse" id="hosp">
                                     <div class="card card-body descricao">
                                         Faz parte do time de
-                                        saude nos eventos na
+                                        saúde nos eventos na
                                         comunidade!
                                         <img src="../../assets/image/icon.png" alt="" id="lamp1">
                                     </div>
@@ -119,7 +117,7 @@
                             <div class="geo">
                                 <div class="collapse" id="inter">
                                     <div class="card card-body descricao">
-                                        Ja participou de intercambio
+                                        Já realizou intercâmbio
                                         e ajuda as pessoas da comunidade
                                         com outros idiomas!
                                         <img src="../../assets/image/icon.png" alt="" id="lamp1">
@@ -165,9 +163,9 @@
                             <div class="geo">
                                 <div class="collapse" id="museum">
                                     <div class="card card-body descricao">
-                                        Visita museus com frequencia
+                                        Visita museus com frequência
                                         e ajuda a comunidade com
-                                        conhecimento historico!
+                                        conhecimento histórico!
                                         <img src="../../assets/image/icon.png" alt="" id="lamp1">
                                     </div>
                                 </div>
