--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
           <div class="card-body">
             <div>
               <div class="form-group">
-                <label for="exampleInputEmail1">Email</label>
+                <label for="exampleInputEmail1">E-mail</label>
                 <input (keydown.enter)="login()" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                   [(ngModel)]="usuario.email" placeholder="Email">
       
@@ -108,9 +108,9 @@
     </div>
 
     <div class="col-md-4" id="descricao">
-      <p>Encontre aqui novas ideias</p>
-      <p>material de estudo</p>
-      <p>rolês culturais</p>
+      <p>Encontre aqui novas ideias,</p>
+      <p>materiais de estudo,</p>
+      <p>rolês culturais e</p>
       <p>conexões</p>
     </div>
   </div>
