--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -20,10 +20,7 @@
                         <div class="card-body p-0">
 
 
-
-                            <!--Modal-->
-                            <!--Botão que irá chamar o modal (cinza)-->
-
+                           <!-- vai para o perfil -->
                             <button type="button" class="btn" data-toggle="modal" data-target="#editarperfil"
                                 id="btnEditar" [routerLink]="['/detalhe']">
                                 <img src="../../assets/image/editarPerfil.png" width="30px" alt="">
@@ -36,33 +33,7 @@
                 </div>
             </div>
 
-            <!--Modal Editar Perfil-->
-            <!--<div class="modal fade" id="editarperfil" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title ml-80" id="tituloEditarPerfil">Editar Meu Perfil</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <label class="ml-3 mb-1">Nome</label><br>
-                    <textarea style="resize: none" rows="1" cols="60" placeholder="Digite seu nome..." class="ml-3"></textarea><br>
-    
-                    <label class="ml-3 mb-1">Biografia</label><br>
-                    <textarea style="resize: none" rows="5" cols="60" placeholder="Digite sua biografia..." class="ml-3"></textarea>
-                
-                </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        <button type="button" class="btn btn-outline-purple" (click)="salvarAlteracoes()">Salvar mudanças</button>
-                    </div>
-            </div>
-        </div>
-    </div>-->
-            <!--/Modal Editar Perfil-->
-
+           
 
             <div class="row">
                 <div class="col-md-12 d-flex justify-content-center">
@@ -120,17 +91,17 @@
                             <!--icone = Thiago -->
                             <div class="row ml-2">
                                 <img src="../../assets/image/notesicon.png" width="50px" class="eventosSalvos">
-                                <p class="d-flex align-items-center ml-2">Você escreveu uma pulicação!</p>
+                                <p class="d-flex align-items-center ml-2">Você escreveu uma publicação!</p>
                             </div>
                             <!--icone -->
                             <div class="row ml-2">
                                 <img src="../../assets/image/notesicon.png" width="50px" class="eventosSalvos">
-                                <p class="d-flex align-items-center ml-2">Você escreveu uma pulicação!</p>
+                                <p class="d-flex align-items-center ml-2">Você escreveu uma publicação!</p>
                             </div>
                             <!--icone -->
                             <div class="row ml-2">
                                 <img src="../../assets/image/likepurple.png" width="50px" class="eventosSalvos">
-                                <p class="d-flex align-items-center ml-2">Você curtiu uma pulicação!</p>
+                                <p class="d-flex align-items-center ml-2">Você curtiu uma publicação!</p>
                             </div>
                             <!--icone -->
                             <div class="row ml-2">
@@ -150,12 +121,12 @@
                             <!--icone -->
                             <div class="row ml-2 mb-1">
                                 <img src="../../assets/image/confirma.png" width="50px" class="eventosSalvos">
-                                <p class="d-flex align-items-center ml-2">Você compareu em um rolê!</p>
+                                <p class="d-flex align-items-center ml-2">Você compareceu em um rolê!</p>
                             </div>
                             <!--icone -->
                             <div class="row ml-2 mb-1">
                                 <img src="../../assets/image/likepurple.png" width="50px" class="eventosSalvos">
-                                <p class="d-flex align-items-center ml-2">Você curtiu uma pulicação!</p>
+                                <p class="d-flex align-items-center ml-2">Você curtiu uma publicação!</p>
                             </div>
 
                         </div>
