--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -12,12 +12,12 @@
             </div>
             <div class="col-md-4"></div>
             <div class="col-sm-12 ">
-                <p class="text-justify mr-5 ml-3">Como será que a tecnologia pode aproximar os jovens, principalmente, da periferia de São Paulo da cultura e da educação?</p>
+                <p class="text-justify mr-5 ml-3">Como será que a tecnologia pode aproximar os jovens, sobretudo os da periferia de São Paulo, da cultura e da educação?</p>
 
-                    <p class="text-justify mr-5 ml-3">Foi pensando nessa questão que criamos o Eureka!
-                    Este  projeto nasceu do amor pelo mundo tech e pelo seu poder de transformação.</p>
+                    <p class="text-justify mr-5 ml-3">Foi pensando nessa questão que criamos a Eureka!
+                    Esse projeto nasceu do amor pelo mundo tech e pelo seu poder de transformação.</p>
                     
-                   <p class="text-justify mr-5 ml-3 mb-5">Nosso maior objetivo é conectar estudantes da rede pública de ensino e professores a fim de tornar o aprendizado mais divertido. Além disso, esta rede social incentiva um maior engajamento cultural através do compartilhamento de eventos que irão colaborar com a formação desses jovens. 
+                   <p class="text-justify mr-5 ml-3 mb-5">Nosso maior objetivo é conectar estudantes da rede pública de ensino e professores a fim de tornar o aprendizado mais divertido. Além disso, esta rede social incentiva o engajamento cultural através do compartilhamento de eventos que irão colaborar com a formação desses jovens. 
                     </p>
  
                     <h3>Missão e Valores</h3>
@@ -85,12 +85,11 @@
                             <div class="collapse mt-3"  id="edson" aria-labelledby="foto2" data-parent="#accordionGroup">
                                 <div class="collapse-text">
                                     <h5>Edson Santana</h5>
-                                    <p>Estudante de Análise e desenvolvimento de Sistema, fascinado por tecnologia e
+                                    <p> Sou estudante de Análise e desenvolvimento de Sistema, fascinado por tecnologia e
                                         jogos desde criança, porém muito curioso para entender como tudo funciona.
-                                        Essa curiosidade o levou a amar ainda mais a tecnologia, buscar e aprender
-                                        coisas novas a cada dia. Acredita que a programação deve ser ensinada desde o
-                                        ensino fundamental, para que todos sejam privilegiados com o prazer do contato
-                                        diferenciado com a tecnologia desde cedo.
+                                        Essa curiosidade me levou a amar ainda mais a tecnologia, buscar e aprender
+                                        coisas novas a cada dia. Acredito que a programação deve ser ensinada desde o
+                                        ensino fundamental, para que todos sejam privilegiados com o prazer de conhecer a tecnologia desde cedo.
                                     </p>
                                 </div>
                             </div>
@@ -132,9 +131,9 @@
                             <div class="collapse mt-3" id="italo" aria-labelledby="foto4" data-parent="#accordionGroup">
                                 <div class="collapse-text">
                                     <h5>Italo Andrew</h5>
-                                    <p>Uma pessoa com uma vontade enorme de aprender e conhecer coisas
-                                        novas,
-                                        me identifiquei com a área de tecnologia depois de experiencias anteriores e
+                                    <p> Sou uma pessoa com uma vontade enorme de aprender e conhecer coisas
+                                        novas.
+                                        Identifiquei-me com a área de tecnologia depois de experiências anteriores e
                                         descobri
                                         minha vocação, fazendo sempre coisas novas e inovando para causar impacto no
                                         mundo!
