Página galeria de troféus finalizada

--- a/src/app/gtrofeus/gtrofeus.component.html
+++ b/src/app/gtrofeus/gtrofeus.component.html
@@ -77,7 +77,7 @@
 
 
 
-                            <img src="../../assets/image/conect.png" alt="" id="conect" data-toggle="collapse"
+                            <img src="../../assets/image/agoravaaai.png" alt=""data-toggle="collapse"
                                 href="#conecta" aria-expanded="false" aria-controls="collapseExample">
                             <div class="geo">
                                 <div class="collapse" id="conecta">
@@ -105,7 +105,7 @@
 
 
                         </div>
-                        <div class="card-text gtrofeus container-flex align-items-md-center">
+                        <div class="card-text gtrofeus container align-items-md-center">
 
 
 
@@ -174,7 +174,7 @@
 
 
 
-                            <img src="../../assets/image/semfundo.png" alt="" id="mascara" alt="" data-toggle="collapse"
+                            <img src="../../assets/image/images.png" alt="" id="mascara" alt="" data-toggle="collapse"
                                 href="#teatro" aria-expanded="false" aria-controls="collapseExample">
                             <div class="geo">
                                 <div class="collapse" id="teatro">
