--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class=" container-fluid navbar navbar-expand-lg" width="100%" style="background-color: #7a297a;" id="navtitile">
-  <a class="navbar-brand" href="#"><img src="../../assets/image/iconeoficial.png" width="35px" ><strong id="titulonavbar">eureka</strong></a>
+  <a class="navbar-brand" [routerLink]="'/Feed'"><img src="../../assets/image/iconeoficial.png" width="35px" ><strong id="titulonavbar">eureka</strong></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
