--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -25,7 +25,7 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
                         <div class="form-group">
-                            <textarea style="resize: none" class="form-control" id="message" rows="4"
+                            <textarea onfocus="this.value=''"  style="resize: none" class="form-control" id="message" rows="4"
                                 placeholder="No que você está pensando?" [(ngModel)]="publicacao">""</textarea>
                         </div>
                     </div>
@@ -53,11 +53,11 @@
                 </div>
             </div>
     
-            <div class="form-inline my-3">
+           <!-- <div class="form-inline my-3">
                 <input class="form-control mr-sm-2" type="search" placeholder="Pesquise" [(ngModel)]="buscar"
                     aria-label="Search">
                 <button class=" btn btn-outline-purple" type="submit" (click)="findId()" >Pesquisar</button>
-            </div>
+            </div>-->
         </div>
 
         <!--Card que mostra os troféus do perfil do usuário conectado-->
