informações sobre nós

--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -151,9 +151,8 @@
                             <div class="collapse" id="wesley" aria-labelledby="foto5" data-parent="#accordionGroup">
                                 <div class="collapse-text mt-3">
                                     <h5>Wesley Paulow</h5>
-                                    <p>Um sujeito periférico, 23 anos, há muito interessado por tecnologia, mas só há
-                                        pouco verdadeiramente enamorado por ela. Entre a cruz e a caldeirinha ao pensar
-                                        sobre a estrutura de classes com viés marxista ou orientado a objetos.
+                                    <p>Sobre mim sempre foi ruim. Prefiro algo  como "ao seu redor". Nada que esteja/seja sobre você é fácil de suportar ou de dizer. Agora sobre o derredor eu digo: um mundo caótico urgindo de <i>sort(e)</i>.
+                                    <b> Precisamos programar um mundo novo.</b>
                                     </p>
                                 </div>
                             </div>
