Deixamos o cards das postagem flexivel, campos dos formulários com efeito de hover, pagina ajuda agora recebeu rota para a página do fale conosco.

--- a/src/app/ajuda/ajuda.component.html
+++ b/src/app/ajuda/ajuda.component.html
@@ -201,13 +201,8 @@
 
 
                <div class="form-group">
-                  <label for="exampleFormControlTextarea1"><strong>Não encontrou o que procurava? Mande-nos sua
-                        pergunta ou sugestão!</strong></label>
-                  <textarea class="form-control" style="resize: none" id="exampleFormControlTextarea1" rows="5"></textarea>
-
-                  <div class="btn-toolbar justify-content-end mb-5">
-                     <button type="submit" class="btn btn-outline-purple mt-3">Enviar</button>
-                  </div>
+                  <strong>Não encontrou o que procurava? Mande-nos sua
+                        pergunta ou sugestão através <a href="#"[routerLink] = "['/contato']" >contato Eureka!</a></strong>
                </div>
             </div>
          </div>
