--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -45,3 +45,8 @@ label{
     color: red;
     padding-left: 10px;
   }
+
+input:hover, textarea:hover{
+background-color: rgba(122, 41, 122, 0.2);
+}
+
