--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -115,3 +115,7 @@ input[type=number] {
 #eureka{
   color: #ffdb58;
 }
+
+input:hover, textarea:hover{
+  background-color: rgba(122, 41, 122, 0.2);
+}
